# LazyTensors

./: .clang-format  .gitignore  CMAKE.md  CMakeLists.txt  README.md
include/: catch_amalgamated.hpp
include/init/: initialiser.hpp  xavier.hpp  zeroes.hpp
include/loss/: bce.hpp  cce.hpp  loss.hpp  mse.hpp
include/module/: dense.hpp  module.hpp  relu.hpp
include/optim/: optimiser.hpp  sgd.hpp
include/tensor/: cpu_impl.hpp  cpu_ops.hpp  cu_macros.hpp  cu_ops.cuh  cuda_impl.hpp  tensor.hpp  tensor_device.hpp  tensor_impl.hpp  tensor_ops.hpp  tensor_shape.hpp
src/init/: xavier.cpp  zeroes.cpp
src/loss/: bce.cpp  cce.cpp  mse.cpp
src/module/: dense.cpp  relu.cpp
src/optim/: optimiser.cpp  sgd.cpp
src/tensor/: cpu_impl.cpp  cuda_impl.cpp  cuda_impl.cu  tensor.cpp  tensor_impl.cpp  tensor_shape.cpp
test/: catch_amalgamated.cpp
test/init/: init_test.cpp
test/loss/: loss_test.cpp
test/module/: dense_test.cpp  relu_test.cpp
test/optim/: sgd_test.cpp
test/tensor/: cpu_impl_test.cpp  cuda_impl_test.cpp  test_helpers.hpp
